# jiutian-caicai-llm-agent-course

./: main.py  pyproject.toml
4.agent/: 02_AI Agent应用类型及Function Calling开发实战.ipynb  03_ReAct Agent 基础理论与项目实战.ipynb  07_LangGraph底层原理解析与基础应用入门.ipynb  08_LangGraph中State状态模式与LangSmith基础使用入门.ipynb  09_单代理架构在 LangGraph 中构建复杂图的应用.ipynb  10_LangGraph 实现自治循环代理（ReAct）及事件流的应用.ipynb  11_LangGrah 长短期记忆实现机制及检查点的使用.ipynb  12_LangGraph 中 Human-in-the-loop 应用实战.ipynb  13_LangGraph Multi-Agent Systems 开发实战.ipynb  pyproject.toml
4.agent/14_supurvisor和GraphRAG/: Ch.14 LangGraph Supervisor 多代理架构与 GraphRAG 综合应用实战.ipynb  company.txt
4.agent/docker-compose/mysql/: docker-compose.yml
4.agent/react_agent/: .gitignore  README.md  agent.py  config.json  main.py  op_llm_client.py  pyproject.toml
4.agent/react_agent/tools/: calc.py  query_product_data.py  read_store_promotions.py  tool_desc.py
