[project]
name = "jiutian-caicai-llm-agent-corse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    "4.agent",
    "4.agent/react_agent",
]
