[project]
name = "4-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.24.0",
    "faker>=37.6.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-milvus>=0.2.1",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.4",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "matplotlib>=3.10.6",
    "neo4j>=5.28.2",
    "openai>=1.97.0",
    "pandas>=2.3.2",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]
